# quickkeys

./: Cargo.toml  LICENSE  README.md  flake.nix  go.mod  go.sum  justfile  main.go
.helix/: languages.toml
appkeys/: appconfig.go  helix.go  helix_test.go  hypr.go
appkeys/parsers/: hyprconf.go  toml.go  toml_test.go
cmd/: root.go
config/: config.go  config_test.go  darwin.go  darwin_test.go  init_test.go  linux.go  linux_test.go  logger.go  windows.go
parsers/: toml.go
qkeys-app/: Cargo.toml
qkeys-config/: Cargo.toml
qkeys-config/presets/: quickkeys.toml
qkeys-config/src/: config.rs  lib.rs  targets.rs
qkeys-config/src/keymap/: key.rs  mod.rs
qkeys-core/: Cargo.toml
qkeys-core/src/: lib.rs
qkeys-core/src/parser/: mod.rs
qkeys-macro/: Cargo.toml
qkeys-shared/: Cargo.toml
qkeys-shared/src/: lib.rs
qkeys-shared/src/event/: cmd.rs  data.rs  mod.rs
reader/: appconfig.go  comments.go  helix.go  hypr.go  read.go
reader/appconfig/: appconfig.go
test_data/: helix.toml
test_data/helix/: config.toml
test_data/hypr/: hypr-binds.conf  hypr-execs.conf  hypr-windows.conf  hypr-workspaces.conf  hyprland.conf
types/: appconfig.go  keys.go  keys_test.go
