[workspace]
resolver = "3"
members = [
  "qkeys-app",
  "qkeys-config",
  "qkeys-core",
  "qkeys-macro",
  "qkeys-shared",
]

[workspace.dependencies]
crossterm = "0.28.1"
clap = { version = "4.5.47", features = ["derive"] }
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"
tokio-stream = "0.1.17"
rayon = "1.11"
anyhow = "1.0.99"
thiserror = "2.0.16"
insta = { version = "1.43.1" }
serde = { version = "1.0.225", features = ["derive"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.20"
hashbrown = "0.16"
strum = { version = "0.27", features = ["derive"] }
futures = "0.3.31"
toml = "0.9.6"
rstest = "0.26.1"
bytes = "1.10.1"
url = { version = "2.5.7", features = ["serde"] }
either = "1.15.0"
regex = "1.11.2"
