[package]
name = "qkeys-config"
version = "0.1.0"
edition = "2024"

[dependencies]
qkeys-macro = { path = "../qkeys-macro", version = "0.1.0" }

# External deps
crossterm = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
